# mediakit

./: .gitignore  .pylintrc  AGENTS.md  README.md  README.zh.md  cli  cli.py  config.py  folder.py  logger.py  main.py  media.py  pyproject.toml  requirements.txt  test.py  watcher.sh  watcher_.sh
.sisyphus/plans/: 2026-05-01-dynamic-cpu-throttle.md
base/: AGENTS.md  __init__.py  audio.py  basetest.py  folder.py  media.py  video.py
docs/superpowers/plans/: 2026-05-02-cli-to-mediakit.md  2026-05-02-refactor-codebase-architecture.md
macOS/LaunchAgents/: media_handler.plist  mediakit.plist
mixins/: __init__.py  whispers.py
openspec/changes/archive/2026-05-01-dynamic-cpu-throttle/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-dynamic-cpu-throttle/specs/dynamic-cpu-throttle/: spec.md
openspec/changes/archive/2026-05-02-cli-to-mediakit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-cli-to-mediakit/specs/cli-entry-point/: spec.md
openspec/changes/archive/2026-05-02-fix-cpu-throttler-crash/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-fix-cpu-throttler-crash/specs/cpu-throttler/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/base-media-model/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/db-layer/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/dead-code-sanitization/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/executor-safety/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/media-type-registry/: spec.md
openspec/changes/archive/2026-05-02-refactor-codebase-architecture/specs/scheduler-pattern/: spec.md
openspec/changes/archive/2026-05-03-add-stop-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-add-stop-command/specs/stop-daemon/: spec.md
openspec/changes/archive/2026-05-03-add-watch-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-add-watch-command/specs/folder-file/: spec.md
openspec/changes/archive/2026-05-03-add-watch-command/specs/folder-watch/: spec.md
openspec/changes/archive/2026-05-03-migrate-python-3-14-and-transcriber/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-migrate-python-3-14-and-transcriber/specs/transcription/: spec.md
openspec/changes/archive/2026-05-04-fix-watch-callback-return-type/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-fix-watch-callback-return-type/specs/watch-state-management/: spec.md
openspec/changes/archive/2026-05-05-dynamic-folder-config-watch/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-05-dynamic-folder-config-watch/specs/config-file-watch/: spec.md
openspec/specs/watch-state-management/: spec.md
src/: AGENTS.md  __init__.py  db.py  schedulers.py  schemas.py  signals.py
src/file/: debounce.py  stability.py
src/mixins/: db.py  transcriber.py  whispers.py
src/models/: _media.py  _type.py  media.py
src/patterns/: middleware_context_closure.py
src/schedulers/: folder.py  media.py  watcher.py
tests/: test_cli.py  test_debounce.py  test_executor.py  test_folder.py  test_media.py  test_model.py  test_scheduler.py  test_scheduler_pattern.py  test_scheduler_watcher.py  test_schema.py  test_src_models_media.py  test_stability.py  test_stop.py  test_test.py  test_throttle_coordinator.py  test_throttle_integration.py  test_throttle_sampling.py  test_throttle_throttler.py  test_transcriber.py  test_translator.py  test_utils.py  test_utils_db.py
utils/: AGENTS.md  __init__.py  baidu_translate.py  cli.py  command.py  db.py  decorator.py  exceptions.py  executor.py  file.py  folder.py  handler.py  media.py  media_types.json  metaclass.py  method.py  progress.py  response.py  speech.py  tools.py  translator.py  video.py
utils/db/: _sqlalchemy.py  _sqlite.py  _sqlmodel.py  base.py
utils/logger/: filters.py  init.py  lexers.py  utils.py
utils/process/: __init__.py  parser.py
utils/throttle/: __init__.py  coordinator.py  sampling.py  throttler.py
