[tool.pyright]
typeCheckingMode = "basic"


# PDM example
[tool.pdm]
distribution = true
[tool.pdm.scripts]
isort = "isort acme"
# black = "black acme"
format = { composite = ["isort", "black"] }
check_isort = "isort --check acme tests"
# check_black = "black --check acme tests"
vulture = "vulture --min-confidence 100 acme tests"
ruff = "ruff check acme tests"
fix = "ruff check --fix acme tests"
codespell = "codespell --toml ./pyproject.toml"
lint = { composite = [
    "vulture",
    "codespell",
    "ruff",
    "check_isort",
    "check_black",
] }

[tool.ruff.format]
quote-style = "single"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true

[tool.black]
line-length = 120
skip-string-normalization = true
# enable-unstable-feature = ["whitespace"]
# target-version = ['py310']
# include = '\.pyi?$'
exclude = '''
/(
    __init__\.py
)/
'''
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''


[tool.autoflake]
check = true
in-place = true
recursive = true
expand-star-imports = true
# remove_all_unused_imports = true
remove-all-unused-imports = true
# remove_unused_variables = true


# [tool.flakehell]
# exclude = ["README.rst", "README.md"]
# format = "colored"
# max_line_length = 88
# show_source = true
# whitelist = "../../allowlist.txt"
# # unused_imports = false


# [tool.mypy]
# python_version = "3.8"
# disallow_untyped_defs = true
# exclude = ["src/(app|ingest)", "scripts", "docs"]
# show_error_codes = true
# no_implicit_optional = true
# warn_return_any = true
# warn_unused_ignores = true

# selectively disable warnings for packages that don't yet have type hints
# [[tool.mypy.overrides]]
# module = "firstmodule.*,secondmodule.*"
# disable_error_code = ["name-defined"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
# [tool.pytest]
minversion = "8.0.0"
pythonpath = ["."]
# addopts = "-ra -q"
addopts = [
    # '-v',
    "-vv",
    # '-s',
    "--rootdir",
    ".",
    "-ra",
    # "-q",
    "--color=yes",
    # "--capture=sys",
    "--capture=tee-sys",

    # "-rf",
    # '--reuse-db', '--no-migrations',
    # "--disable-socket",
]
# log_cli = true
# log_cli_level = "DEBUG"
testpaths = ["tests", "./tests", "*/tests", "**/tests"]
python_files = ["test_*.py", "tests.py", "test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [
    ".vscode",
    "__pycache__",
    "node_modules",
    "venv",
    "env",
    "migrations",
    "static",
    "templates",
    "docs",
    "build",
    "dist",
    ".*",
]
# Warnings that should be ignored
filterwarnings = ["ignore::DeprecationWarning"]


[tool.isort]
# reference: https://pycqa.github.io/isort/docs/configuration/options.html
# settings_file = ".isort.cfg"
profile = "black"
line_length = 120
skip_gitignore = true
# force_alphabetical_sort = true
force_alphabetical_sort_within_sections = true
remove_redundant_aliases = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
atomic = true
src_paths = ["isort", "test"]
# reverse_sort = true
# tuple_bracket_spacing = true
# tuple_brackets = false
# force_grid_wrap = 4
# 是否按照嵌套顺序分组导入
force_sort_within_sections = true
# 导入顺序 例如: 在项目中应该先导入标准库、然后是第三方库、最后是自己的模块
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
# no_lines_before = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
# 是否根据文件中导入语句的顺序对导入进行排序
force_single_line = false
# 是否在导入语句过多时分割成多行
combine_as_imports = false
# known_third_party = ["django", "rest_framework"]
# known_first_party = ["black", "blib2to3", "blackd", "_black_version"]
# known_local_folder = ["my_module3"]
# known_django = "django"
lines_after_imports = 2
lines_between_types = 1
# multi_line = 3
# trailing_comma = true
skip = [
    "__init__.py",
    "migrations",
    "static",
    "templates",
    'node_modules',
    "build",
    ".tox",
    'venv',
    'env',
    "apps/*/migrations",
    "apps/*/static",
    "apps/*/templates",
]
extend_skip = ['.md', '.json', '.gitignore', '.dockerignore']
skip_glob = ['docs/*', "tests/data", "profiling"]
extend_skip_glob = ['my_*_module.py']
# 在导入中添加导入时间戳注释: 要求 isort=>5.5.0
# annotate = true


[tool.codespell]
# codespell supports pyproject.toml since version 2.2.2
# NOTE: the "tomli" package must be installed for this to work
# https://github.com/codespell-project/codespell#using-a-config-file
# NOTE: ignore words for codespell must be lowercase
check-filenames = ""
ignore-words-list = "word,another,something"
skip = "htmlcov,.doctrees,*.pyc,*.class,*.ico,*.out,*.PNG,*.inv,*.png,*.jpg,*.dot"

[project]
name = "media_handler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redatman", email = "evicwork@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests==2.31.0",
    "sqlalchemy==2.0.27",
    "sqlmodel==0.0.16",
    "pygments==2.17.2",
    "pydantic==2.6.1",
    "openai-whisper==20250625",
    "faster-whisper==1.1.1",
    "whisper-cpp-pybind==0.1.3",
    "ffmpeg-python==0.2.0",
    "psutil==7.0.0",
    # voice recognition
    "SpeechRecognition==3.10.1",
    "PyAudio==0.2.14",
    "pyttsx3==2.90",
    # MacOS seems to need this for pyttsx3
    # "pyobjc==9.0.1",
]

[project.scripts]
mediakit = "cli:main"

[project.optional-dependencies]
dev = ["black==25.1.0", "isort==6.0.1", "uv==0.7.17"]
test = []
prod = []

[dependency-groups]
dev = [
    "codespell",
    "ruff>=0.15.12",
    "vulture>=2.16",
]


[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
